; ModuleID = '/home/carl/AnghaBench/openvpn/src/openvpn/extr_env_set.c_setenv_str.c'
source_filename = "/home/carl/AnghaBench/openvpn/src/openvpn/extr_env_set.c_setenv_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.env_set = type { i32 }

@CC_NAME = common dso_local global i32 0, align 4
@CC_PRINT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @setenv_str(%struct.env_set* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.env_set*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store %struct.env_set* %0, %struct.env_set** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load %struct.env_set*, %struct.env_set** %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = load i32, i32* @CC_NAME, align 4
  %11 = load i32, i32* @CC_PRINT, align 4
  %12 = call i32 @setenv_str_ex(%struct.env_set* %7, i8* %8, i8* %9, i32 %10, i32 0, i32 0, i32 %11, i32 0, i32 0)
  ret void
}

declare dso_local i32 @setenv_str_ex(%struct.env_set*, i8*, i8*, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
